--- a/game1/Cargo.toml
+++ b/game1/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rpciege-game"
+name = "rpci"
 version = "0.1.0"
 edition = "2021"
 
@@ -14,13 +14,3 @@ soroban-sdk = "0.8.4"
 
 [dev_dependencies]
 soroban-sdk = { version = "0.8.4", features = ["testutils"] }
-
-[profile.release]
-opt-level = "z"
-overflow-checks = true
-debug = 0
-strip = "symbols"
-debug-assertions = false
-panic = "abort"
-codegen-units = 1
-lto = true
